# joi-grad-shopping-cart-c

./: .gitignore  CMakeLists.txt  README.md  README.pt-br.md  conanfile.txt  joi-grad-shopping-cart-c.sln  joi-grad-shopping-cart-c.vcxproj  joi-grad-shopping-cart-c.vcxproj.filters
include/: customer.h  order.h  placeholder.h  product.h  shopping_cart.h
src/: main.c  order.c  placeholder.c  shopping_cart.c
test/: shopping_cart_test.c  shopping_cart_test.h  test_main.c
